parte 1 do exemplo

--- a/DotNetMagazineMigrations/ExemploSimples/ExemploSimples.csproj
+++ b/DotNetMagazineMigrations/ExemploSimples/ExemploSimples.csproj
@@ -48,7 +48,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria.cs" />
     <Compile Include="ExemploContext.cs" />
+    <Compile Include="Migrations\201501171834381_InitialCreate.cs" />
+    <Compile Include="Migrations\201501171834381_InitialCreate.Designer.cs">
+      <DependentUpon>201501171834381_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201501171858302_AdicionaCategoria.cs" />
+    <Compile Include="Migrations\201501171858302_AdicionaCategoria.Designer.cs">
+      <DependentUpon>201501171858302_AdicionaCategoria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -56,6 +66,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201501171834381_InitialCreate.resx">
+      <DependentUpon>201501171834381_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501171858302_AdicionaCategoria.resx">
+      <DependentUpon>201501171858302_AdicionaCategoria.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
